cabal-version:       2.4

name:                types-matter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gvolpe/types-matter
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com

library
  exposed-modules:     Foldy
                     , Http
                     , Refined.Instances
                     , Stringy
  build-depends:       base ^>=4.12.0.0
                     , refined >= 0.4.2 && < 0.5
                     , text >= 1.2.3 && < 1.3
                     , template-haskell >= 2.14.0 && < 2.15
  hs-source-dirs:      src
  default-language:    Haskell2010

executable types-matter
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , refined >= 0.4.2 && < 0.5
                     , types-matter
  hs-source-dirs:      app
  default-language:    Haskell2010
