cabal-version:       2.4

name:                types-matter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gvolpe/types-matter
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com

library
  exposed-modules:     Control.Parallel
                     , Control.Parallel.Class
                     , Foldy
                     , Http
                     , ParValidation
                     , Refined.Instances
                     , Stringy
  build-depends:       base
                     , async
                     , natural-transformation
                     , random
                     , refined
                     , text
                     , template-haskell
                     , validators
  hs-source-dirs:      src
  default-language:    Haskell2010

executable types-matter
  main-is:             Main.hs
  build-depends:       base
                     , refined
                     , types-matter
  hs-source-dirs:      app
  default-language:    Haskell2010
